--- a/dkgj-api/src/main/resources/application-ldq.yml
+++ b/dkgj-api/src/main/resources/application-ldq.yml
@@ -4,18 +4,18 @@ server:
     uri-encoding: UTF-8
     max-threads: 1000
     min-spare-threads: 30
-  port: 8016
+  port: 8081
   servlet:
-    context-path: /rhh-api
+    context-path: /ldq-api
 
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://47.96.118.185:3306/market?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+      url: jdbc:mysql://47.114.163.8:3306/market?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
       username: root
-      password: shuailijie*CF2
+      password: '#3z9WNPgmR'
       initial-size: 10
       max-active: 100
       min-idle: 10
