--- a/dkgj-admin/src/main/resources/application-ldq.yml
+++ b/dkgj-admin/src/main/resources/application-ldq.yml
@@ -6,7 +6,7 @@ server:
     min-spare-threads: 30
   port: 8080
   servlet:
-    context-path: /ldq-admin
+    context-path: /ycqb-admin
 
 spring:
   datasource:
@@ -53,7 +53,7 @@ spring:
 #      password: Qtz@2019
 app:
   config:
-    app: 5
-    sign: LDQ
+    app: 1
+    sign: 易财钱包
     accesskey: 631mySZo3d6wHz57
     accessSecret: GGhPMsXyIGRkhAiHSbc41lS0oIqXlkdq
