--- a/dkgj-api/src/main/resources/application.yml
+++ b/dkgj-api/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   # 环境 dev|test|prod
   profiles:
-    active: ldq
+    active: ycqb
   servlet:
     multipart:
       max-file-size: 100MB
