--- a/dkgj-api/src/main/resources/application-ycqb.yml
+++ b/dkgj-api/src/main/resources/application-ycqb.yml
@@ -57,3 +57,6 @@ app:
     sign: 易财钱包
     accesskey: 631mySZo3d6wHz57
     accessSecret: GGhPMsXyIGRkhAiHSbc41lS0oIqXlkdq
+    moSign: 易财钱包
+    moUsername: httz001
+    moPwd: 4dae6489da13cc5285058c9124346ef0
