--- a/dkgj-admin/Dockerfile
+++ b/dkgj-admin/Dockerfile
@@ -2,6 +2,6 @@ FROM java:8
 EXPOSE 8080
 
 VOLUME /tmp
-ADD renren-admin.jar /app.jar
-RUN bash -c 'touch /app.jar'
-ENTRYPOINT ["java","-jar","/app.jar"]
+ADD dkgj-admin.jar /app-admin.jar
+RUN bash -c 'touch /app-admin.jar'
+ENTRYPOINT ["java","-jar","/app-admin.jar"]
