--- a/dkgj-api/Dockerfile
+++ b/dkgj-api/Dockerfile
@@ -2,6 +2,6 @@ FROM java:8
 EXPOSE 8081
 
 VOLUME /tmp
-ADD renren-api.jar /app.jar
-RUN bash -c 'touch /app.jar'
-ENTRYPOINT ["java","-jar","/app.jar"]
+ADD dkgj-api.jar /app-api.jar
+RUN bash -c 'touch /app-api.jar'
+ENTRYPOINT ["java","-jar","/app-api.jar"]
